--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "asi",
+  "private": true,
   "version": "1.0.0",
   "main": "packages/core/index.js",
   "license": "MIT",
   "devDependencies": {
     "lerna": "^3.22.1"
-  }
+  },
+  "workspaces": [
+    "packages/*"
+  ]
 }
