BREAKING CHANGES: add packages

--- a/packages/calculator/package.json
+++ b/packages/calculator/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "funnies": "^2.1.0"
+    "funnies": "^2.1.0",
+    "styled-components": "^5.1.1"
   }
 }
